--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3"
+  },
+  "devDependencies": {
+    "erc721a": "^4.2.3"
   }
 }
